--- a/themes/econtra/layouts/partials/head.html
+++ b/themes/econtra/layouts/partials/head.html
@@ -26,6 +26,8 @@
 
     <!-- Modify the custom.css file inside static > css to use vanilla css -->
     <!-- <link type="text/css" rel="stylesheet" href="{{ "/" | relURL }}css/custom.css"> -->
+
+    <script src="https://unpkg.com/lunr/lunr.js"></script>
  
     {{ with .OutputFormats.Get "RSS" }}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
