--- a/themes/econtra/layouts/partials/head.html
+++ b/themes/econtra/layouts/partials/head.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="{{ "favicon-96x96.png" | relURL }}">
     <link rel="manifest" href="{{ "manifest.json" | relURL }}">
     <link rel="mask-icon" href="{{ "safari-pinned-tab.svg" | relURL }}" color="#FF3DB4">
+    <link rel="me" href="https://mastodon.ie/@dueyfinster">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Styles -->
