--- a/themes/econtra/layouts/partials/head.html
+++ b/themes/econtra/layouts/partials/head.html
@@ -22,18 +22,18 @@
 
     <!-- Uncomment to add custom styles -->
     <!-- Modify the custom.scss file inside assets > css to use scss -->
-    <!-- {{ $custom_style := resources.Get "css/custom.scss" | toCSS | minify | fingerprint }} 
+    <!-- {{ $custom_style := resources.Get "css/custom.scss" | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $custom_style.Permalink }}"/> -->
 
     <!-- Modify the custom.css file inside static > css to use vanilla css -->
     <!-- <link type="text/css" rel="stylesheet" href="{{ "/" | relURL }}css/custom.css"> -->
 
     <script src="https://unpkg.com/lunr/lunr.js"></script>
- 
+
     {{ with .OutputFormats.Get "RSS" }}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
     {{ end }}
-    {{- if not .Site.IsServer -}}
+    {{- if not hugo.IsServer -}}
       {{ template "_internal/google_analytics.html" . }}
     {{- end -}}
 </head>
